fix y-overflow for some variations

--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -262,3 +262,36 @@ cg-board piece.fading {
   width: 7px;
   height: 6px;
 }
+
+/* .tview2 line {
+    display: block;
+    padding-inline-start: 7px;
+    position: relative;
+} */
+
+  .line .comment {
+    display: inline;
+    color: $c-font-dim;
+    word-wrap: break-word;
+    padding: 0 5px 0 3px;
+    vertical-align: top;
+  }
+
+  .lines {
+    display: block;
+    /* margin-top: 2px; */
+    margin-inline-start: 6px;
+    /* margin-bottom: 0.8em; */
+    padding-inline-start: 2px;
+  }
+
+  .line {
+    display: block;
+    padding-inline-start: 7px;
+    position: relative;
+  }
+
+
+
+
+
